# AIProject2

./: AIProject2.pro  CMakeLists.txt  addvaluedialog.cpp  addvaluedialog.h  addvaluedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ts  mainwindow.ui
NeuralNetworkLibrary/: backpropagationworker.cpp  backpropagationworker.h  calc.cpp  calc.h  layer.cpp  layer.h  neuralnetwork.cpp  neuralnetwork.h  neuralnetwork.h.autosave
